# nvd-checker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  implementation_plan.md  pyproject.toml  task.md
agent/: Dockerfile  implementation_plan.md  pyproject.toml  task.md
agent/agent/: __init__.py  main.py  prompts.py
argocd/: agent-appset.yaml  mcp-appset.yaml
chart/nvd-agent/: Chart.yaml  values.yaml
chart/nvd-agent/templates/: _helpers.tpl  deployment.yaml  externalsecret.yaml
chart/nvd-mcp/: Chart.yaml  values.yaml
chart/nvd-mcp/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  externalsecret.yaml  ingress.yaml  service.yaml
cli/: pyproject.toml
cli/nvd_checker/: __init__.py  utils.py
cli/nvd_checker/nvd/: client.py
cli/nvd_checker/report/: __init__.py  generator.py
cli/nvd_checker/scanner/: node_parser.py  python_parser.py  ruby_parser.py
cli/tests/: test_mcp_tools.py  test_report.py
mcp_server/: Dockerfile  build-mcp.sh  implementation_plan.md  pyproject.toml  task.md
mcp_server/mcp_server/: __init__.py  repo_manager.py  server.py  tools.py
nvd_checker/: __main__.py  cli.py
nvd_checker/nvd/: __init__.py  matcher.py  models.py
nvd_checker/report/: advisor.py
nvd_checker/report/templates/: report.html
nvd_checker/scanner/: __init__.py  base.py  detector.py  go_parser.py  java_parser.py
tests/: test_matcher.py  test_nvd_client.py  test_scanner.py
