[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nvd-checker"
version = "1.0.0"
description = "CLI tool to scan Git repositories for third-party dependencies and check them against the NVD (National Vulnerability Database) for known CVEs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vitor", email = "vitornascimentoaraujo@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "requests>=2.28",
    "rich>=13.0",
    "jinja2>=3.1",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
]

[project.scripts]
nvd-checker = "nvd_checker.cli:cli"


[project.urls]
Homepage = "https://github.com/vit0r/nvd-checker"
Repository = "https://github.com/vit0r/nvd-checker"
Issues = "https://github.com/vit0r/nvd-checker/issues"

[tool.setuptools.packages.find]
include = ["nvd_checker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
